--- a/templates/pages/playlists.html.twig
+++ b/templates/pages/playlists.html.twig
@@ -35,7 +35,13 @@
                 </th>
                 <th class="text-center align-top" scope="col">
                     &nbsp;
-                </th>				
+                </th>
+                <th class="text-center align-top" scope="col">
+                    Nombre de formations<br />
+                    <a href="{{ path('playlists.sort', {champ:'number', ordre:'ASC'}) }}" class="btn btn-info btn-sm active" role="button" aria-pressed="true"><</a>
+                    <a href="{{ path('playlists.sort', {champ:'number', ordre:'DESC'}) }}" class="btn btn-info btn-sm active" role="button" aria-pressed="true">></a>
+
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -58,7 +64,10 @@
                         </td>            					
                         <td class="text-center">
                             <a href="{{ path('playlists.showone', {id:playlists[k].id}) }}" class="btn btn-secondary">Voir détail</a>
-                        </td> 					
+                        </td>
+                        <td class="text-center">
+                            {{ playlists[k].formations|length }} vidéos
+                        </td>
                     </tr>
                 {% endfor %}	
             {% endif %}
